# claude-code-camp-2026-Q2

./: .gitignore  README.md
docs/: exploration_architectures.md  explore_architectures.md  multiagents.md
docs/journal/: 0_preweek.md
week0_explore/: HOW_TO_PLAY.md
week0_explore/circlemud-world-parser/: .gitignore  Makefile  convert_all.sh  pyproject.toml
week0_explore/circlemud-world-parser/assets/trg/: 30.trg
week0_explore/circlemud-world-parser/circlemud_world_parser/: constants.py  mobile.py  models.py  object.py  parse.py  quest.py  room.py  shop.py  trigger.py  utils.py  zone.py
week0_explore/circlemud-world-parser/tests/: conftest.py  test_integration.py  test_mobile.py  test_object.py  test_quest.py  test_room.py  test_shop.py  test_trigger.py  test_utils.py  test_zone.py
week0_explore/explore_architecture/: CLAUDE.md
week0_explore/explore_architecture/01_playing_agent/: CLAUDE.md
week0_explore/explore_architecture/02_agent_skills/: HOW_TO_CREATE_SKILL.md
week0_explore/explore_architecture/03b_subagent_sdk/: run_agents.py
week0_explore/explore_architecture/04_n8n/: README.md  package-lock.json
week0_explore/infrastructure/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
week0_explore/mud_manager/: README.md  mud_manager-0.1.0.gem  mud_manager.gemspec
week0_explore/mud_manager/examples/: live_session_test.rb  simple.rb
week0_explore/mud_manager/lib/: mud_manager.rb
week0_explore/preview/: README.md
week0_explore/preview/web/: .gitignore  README.md  index.html  package-lock.json  (+3 more)
(+61 files in other folders)
